--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- <button>Click me</button> -->
     <header>
         <div class="bandes">
             <h1 class="bold color">Let's help those who are more in need</h1>
@@ -83,6 +84,7 @@
     <footer>
         <div class="back">Copyright 2023</div>
     </footer>
+    <script src="js.js"></script>
 </body>
 
 </html>
